require shader uniforms to be set by block
switch to generated mode7 shader

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -96,5 +96,21 @@
                 "isDefault": true
             }
         },
+        {
+            "label": "apitrace run executable",
+            "type": "shell",
+            "command": "apitrace",
+            "args": ["trace", "--api", "gl", "${workspaceFolder}/zig-cache/bin/run"],
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "presentation": {
+                "clear": true
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
     ]
 }
